# cluel

./: .gitignore
localcopilot/: .env.example  README.md  docker-compose.yml
localcopilot/backend/: Dockerfile  requirements.txt  run.sh
localcopilot/backend/app/: config.py  database.py  main.py  models.py  schemas.py
localcopilot/backend/app/routes/: assistant.py  health.py  ocr.py  sessions.py  settings.py  transcription.py
localcopilot/backend/app/services/: context_service.py  llm_service.py  ocr_service.py  screenshot_service.py  settings_loader.py  summary_service.py  transcription_service.py
localcopilot/backend/app/utils/: logging.py  privacy.py
localcopilot/backend/tests/: test_assistant.py  test_health.py  test_privacy.py
localcopilot/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
localcopilot/desktop/src/: App.tsx  styles.css
localcopilot/desktop/src-tauri/: Cargo.toml  tauri.conf.json
localcopilot/desktop/src-tauri/src/: commands.rs  main.rs
localcopilot/desktop/src/components/: AssistantTab.tsx  CopilotOverlay.tsx  FooterBar.tsx  NotesTab.tsx  RecordingBar.tsx  SettingsTab.tsx  TabBar.tsx  TitleBar.tsx  TranscriptTab.tsx
localcopilot/desktop/src/hooks/: useAssistant.ts  useHotkey.ts  useRecorder.ts  useSettings.ts
localcopilot/desktop/src/lib/: api.ts  types.ts
