[package]
name = "localcopilot"
version = "0.1.0"
description = "LocalCopilot — Ethical AI Meeting Assistant"
authors = []
edition = "2021"
rust-version = "1.77.2"
default-run = "localcopilot"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "notification-all", "http-all",
  "global-shortcut-all",
  "window-all",
  "dialog-all",
  "fs-all",
  "macos-private-api",
] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.4"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
